# FireFist

./: README.md
FireFist/: main.cpp
Project/: CMakeLists.txt  CameraRenderer.cpp  CameraRenderer.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Insect.cpp  Insect.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  main.cpp
